feat: abstract transaction management and improve DB operation interfaces
* This commit enhances the abstraction of transaction management and database operations within the batch framework.

Key Changes:

* **Abstraction and Centralization of Transaction Management:**
    * Introduced `TxExecutor` and `TransactionManagerFactory` interfaces in `pkg/batch/core/tx/tx.go`. This allows database write operations to be executed through a unified interface regardless of transaction status and enables the creation of transaction managers independent of specific database connection types.
    * Updated `GormTransactionManagerFactory` in `pkg/batch/adaptor/database/gorm/adapter.go` to implement the new `TransactionManagerFactory` interface, constructing transaction managers via `port.DBConnectionResolver`.
* **Common Interface for Database Operations:**
    * Added the `DBExecutor` interface to `pkg/batch/core/adaptor/database.go` and embedded it into the `DBConnection` interface. This standardizes `ExecuteUpdate` and `ExecuteUpsert` methods across both standard database connections and transactions.
    * Implemented `ExecuteUpdate` and `ExecuteUpsert` in `GormDBAdapter` (`pkg/batch/adaptor/database/gorm/adapter.go`) to provide concrete database operations using GORM.
* **Dependency Injection of Transaction Management in Step Factory:**
    * Modified `DefaultStepFactory` in `pkg/batch/engine/step/factory/factory.go` to receive `tx.TransactionManagerFactory` instead of `tx.TransactionManager` directly. This delegates the transaction manager creation logic to the factory during step construction, resulting in a cleaner dependency structure.

These changes improve the flexibility and scalability of the framework's database and transaction management layers.

--- a/compose.yaml
+++ b/compose.yaml
@@ -8,6 +8,7 @@ services:
       - "2345:2345"
     environment:
       TZ: 'Asia/Tokyo'
+      GOPROXY: 'https://proxy.golang.org'
     env_file:
       - .env
     privileged: true
@@ -30,7 +31,7 @@ services:
     image: "mysql:8.0.28-debian"
     platform: linux/amd64
     ports:
-      - "3308:3306"
+      - "3306:3306"
     environment:
       MYSQL_DATABASE: main
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
@@ -46,7 +47,7 @@ services:
     container_name: postgres
     image: "postgres:latest"
     ports:
-      - "5433:5432"
+      - "5432:5432"
     environment:
       POSTGRES_DB: main
       POSTGRES_USER: weather
