--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -6,15 +6,15 @@ vars:
   WEATHER_TASKFILE_PATH: example/weather/Taskfile.yaml
 
 tasks:
-  # リポジリ全体のテストを実行
+  # Run all tests in the repository.
   test:
     desc: "Run all tests in the repository."
     cmds:
       - go test ./test/... -v -count=1
 
-  # Goモジュールの依存関係を整理
+  # Clean up Go module dependencies.
   mod-tidy:
-    desc: "Add missing and remove unused go-modules."
+    desc: "Clean up Go module dependencies (add missing and remove unused modules)."
     cmds:
       - go clean -modcache
       - go clean -cache -testcache
